cmake_minimum_required(VERSION 3.0.0)
project(ardu_log_parser VERSION 0.1.0)
FIND_LIBRARY (Boost REQUIRED)
include(CTest)
enable_testing()
include_directories(include)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lib/cppystruct)
add_executable(log_parser main.cpp parser.cpp)
target_link_libraries(log_parser CPPYSTRUCT)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
