cmake_minimum_required(VERSION 3.0.0)
project(ardu_log_parser VERSION 0.1.0)
include_directories(include)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lib/cppystruct)
add_executable(example parser.cpp example/main.cpp )
add_library(DFParser parser.cpp)
target_link_libraries(example CPPYSTRUCT)
target_link_libraries(DFParser CPPYSTRUCT)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
